<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mltool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--ui_title-->
    <string name="ui_title_login">登入账号</string>
    <string name="ui_title_reg">注册账号</string>
    <string name="ui_title_main">主页面</string>


    <!-- 抽屉菜单 -->
    <string name="home">首页</string>
    <string name="download">下载管理</string>
    <string name="fav_pro">关注项目</string>
    <string name="fav_user">关注的人</string>
    <string name="setting">设置</string>
    <string name="help">帮助与反馈</string>

    <!-- 右上角菜单 -->
    <string name="action_test">测试</string>
    <string name="action_search">搜索</string>
    <string name="action_logout">退出</string>
    <string name="menu_icon">icon</string>
    <string name="action_settings">设置</string>
    <string name="findpass">忘记密码？</string>

    <!--login-->
    <string name="btn_login">登入</string>
    <string name="btn_reg">注册账号</string>
    <string name="login_account">email/手机号</string>
    <string name="login_pass">密码</string>

    <!--reg-->
    <string name="reg_mobile">手机号</string>
    <string name="btn_get_mcode">获取手机验证码</string>
    <string name="reg_code">验证码</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="title_activity_main1">Main1Activity</string>
    <string name="hello_world">Hello world!</string>


    <!--formdemo-->
    <string name="gender_title">性别</string>
    <string-array name="gender">
        <item>男</item>
        <item>女</item>
    </string-array>


    <!--status text-->
    <string name="status_account_no_login">未登入</string>


</resources>
